--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">UCSB 360 Official</string>
@@ -8,12 +7,14 @@
     <string name="LOGO">UCSB360</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="Welcome">Login with Facebook</string>
+    <string name="Welcome">Login with Facebook!</string>
     <string name="login_hint">Email</string>
     <string name="password_hint">Password</string>
     <string name="login">Login</string>
     <string name="view">View Without Login</string>
     <string name="title_activity_camera">Camera</string>
     <string name="title_activity_camera_view">CameraView</string>
-
+	<string name="login_failed_dialog_title">Login failed</string>
+	<string name="ok_button">OK</string>
+	<string name="app_id">560602963958157</string>
 </resources>
