--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,4 +17,5 @@
 	<string name="login_failed_dialog_title">Login failed</string>
 	<string name="ok_button">OK</string>
 	<string name="app_id">560602963958157</string>
+	<string name="status_bar_scanning">Scanning</string>
 </resources>
