--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,4 +18,5 @@
 	<string name="ok_button">OK</string>
 	<string name="app_id">560602963958157</string>
 	<string name="status_bar_scanning">Scanning</string>
+	<string name="post">Post to Facebook</string>
 </resources>
