Created the review augmentation page. cancel button goes back to create aug page post button only shows a dialog of what to do done (checkmark) button goes back to cloudReco, but it is causing issue. of locking the camera

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,4 +19,6 @@
 	<string name="app_id">560602963958157</string>
 	<string name="status_bar_scanning">Scanning</string>
 	<string name="post">Post to Facebook</string>
+	<string name="augmentation_hint">Input augmentation message here!</string>
+	
 </resources>
