--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,4 +27,5 @@
 	<string name="facebookLike">Like</string>
 	<string name="sharefb">Share on your Facebook Wall</string>
 	<string name="share_hint">Type your message here!</string>
+	<string name="cancel">Cancel</string>
 </resources>
