--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,8 +27,8 @@
 	<string name="facebookLike">Like</string>
 	<string name="sharefb">Share on your Facebook Wall</string>
 	<string name="set_privacy">Privacy</string>
-	<string name="radio_public">Public</string>
-	<string name="radio_private">Friends Only</string>
+	<string name="radio_public">public</string>
+	<string name="radio_private">private</string>
 	<string name="done_set_privacy">Done</string>
 	<string name="share_hint">Type your message here!</string>
 	<string name="cancel">Cancel</string>
